# OpenCL-Python-Test

./: .clang-format  .gitignore  CMakeLists.txt  README  test_python_module.py
include/: DiscoveryUtils.hpp  ImportOpenCL.hpp
src/: DiscoveryUtils.cpp  PythonModule.cpp  Test.cpp
